# gnc_prj

./: .gitignore  README.md  WLSPvt.py  animate.py  brdc3420.24g  brdc3420.24n  brdc3480.24n  check_gps_eph_inputs.py  data_loader.py  day_of_year.py  estimation.py  evaluation.py  flight_time_correction.py  get_nasa_hourly_ephemeris.py  gnss_log_2024_12_07_16_26_41.24o  gnss_log_2024_12_13_11_31_47.24o  gnss_thresholds.py  gps_constants.py  gps_eph_to_dtsv.py  gps_eph_to_pvt.py  gps_eph_to_xyz.py  gps_to_utc.py  julian_day.py  kml.py  leap_seconds.py  main.py  main2.py  map.py  model.py  obs.py  pyproject.toml  read_rinex_nav.py  requirements.txt  rinex2.py  rinex4.py  utc_to_gps.py  utils.py  wls_pvt.py  zd_test_lla.py
archive/: main.py  rinex2.py
data/: index.toml
data/1_Medium_Interference_Near_SAA_1525/: 2024-12-14_15_17_46.294_2024-12-14T15_17+08.kmz  gnss_log_2024_12_14_15_17_38.24o  gnss_log_2024_12_14_15_17_38_rnx_data.txt
data/2_Open_field_Lawn_1541/: 2024-12-14_15_28_45.489_2024-12-14T15_28+08.kmz  gnss_log_2024_12_14_15_28_53.24o
data/3_Forest_1542/: 2024-12-14_15_46_41.842_2024-12-14T15_46+08.kmz  doc.kml  gnss_log_2024_12_14_15_46_31.24o  gnss_log_2024_12_14_15_46_31_rnx_data.txt
data/4_LibraryBasement_1606/: 2024-12-14_16_02_06.694_2024-12-14T16_02+08.kmz  doc.kml  gnss_log_2024_12_14_16_02_14.txt
data/5_DormArea_HighInterference_1620/: doc.kml  gnss_log_2024_12_14_16_14_30.24o  gnss_log_2024_12_14_16_14_30_rnx_data.txt
data/6_FootBall Field_1639/: doc.kml  (+2 more)
gnssvenv/: pyvenv.cfg
nav/: brdc3490.24g  brdc3490.24n  brdc3630.24n
(+40 files in other folders)
