[project]
name = "gnc_prj"
version = "0.1.0"
description = "Python-based solution to analyze RINEX files from GNSS Logger App, generating 12 geospatial visualizations depicting the correlation between satellite distribution and delusion of precision."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pyqt6>=6.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
